<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:background="@drawable/background"
    android:orientation="vertical">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_20sdp"
        android:text="@string/app_name"/>

     <TextView
         android:id="@+id/contentMessage"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:textSize="@dimen/_15sdp"
         android:text="@string/TXT_LBL_Are_you_sure_you_want_to_exit"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="end"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="15dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="@string/TXT_LBL_no"
            android:textColor="@color/white"
            />
        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cornerRadius="15dp"
            android:padding="10dp"
            android:layout_weight="1"
            android:text="@string/TXT_LBL_yes"
            android:textColor="@color/white"
            />
    </LinearLayout>





</LinearLayout>