<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    android:focusable="true"
    android:focusedByDefault="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.NotificationFragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical"
        android:focusedByDefault="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/aboutCityImageBG"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/stroke_state_selector"
            android:padding="0dp"
            android:focusable="true"
            android:focusedByDefault="true"
            android:src="@drawable/back_arrow"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT_LBL_notifications"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/newMessagesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TXT_LBL__4_new_messages"
                    android:textColor="@color/white"/>
                <View
                    android:layout_width="1.1dp"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"/>

                <TextView
                    android:id="@+id/messagesTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/TXT_LBL__10_messages"
                    android:textColor="@color/white"/>

            </LinearLayout>


        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notificationRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="10"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/notification_item"
            android:text="@string/TXT_LBL_we_re_the_sales_performance_agency_we_re_been_helping_businesses_drive_revenue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:animationCache="true"
            app:shimmer_repeat_mode="restart"
            app:shimmer_shape="radial"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"  >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >
                <include
                    layout="@layout/shimmer_notification_layout"/>
                <include
                    layout="@layout/shimmer_notification_layout"/>
                <include
                    layout="@layout/shimmer_notification_layout"/>
                <include
                    layout="@layout/shimmer_notification_layout"/>
                <include
                    layout="@layout/shimmer_notification_layout"/>
                <include
                    layout="@layout/shimmer_notification_layout"/>

            </LinearLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/aboutCityImageBG"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:src="@drawable/bg1"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>