<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.LoginFragment">

<ImageView
    android:id="@+id/backgroundLoginImageView"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:src="@drawable/bg"
    android:scaleType="fitXY"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingEnd="20dp"
                        android:paddingStart="20dp"
                        android:paddingBottom="20dp"
                        android:gravity="center"
                        >
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:src="@drawable/logo"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="@dimen/_12sdp"
                            android:text="@string/TXT_LBL_login_for_existing_users"
                            android:layout_marginTop="5dp"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:textColor="@color/black"
                            android:textAlignment="center"
                            android:textSize="@dimen/_10sdp"
                            android:text="@string/TXT_LBL_dummy_txt_2lines"
                            android:layout_marginTop="8dp"/>




                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/emailTxtInputEdtTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:startIconDrawable="@drawable/email"
                            app:endIconDrawable="@drawable/_5__keyboard"
                            app:endIconCheckable="false"
                            app:endIconScaleType="centerCrop"
                            app:endIconMode="custom"
                            app:endIconTint="@null"
                            app:startIconTint="@null"
                            app:hintEnabled="true"
                            app:endIconMinSize="@dimen/_10sdp"
                            android:textColorHint="@color/white"
                            app:hintAnimationEnabled="true"
                            android:hint="@string/TXT_LBL_enter_email"
                            app:boxBackgroundColor="@color/black"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusBottomEnd="10dp"
                            app:boxCornerRadiusTopStart="10dp"
                            android:focusedByDefault="true"
                            android:background="@drawable/state_selectors"
                            android:nextFocusDown="@id/passwordEdtTxt"
                            android:nextFocusRight="@id/passwordEdtTxt"
                            >
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/emailEdtTxt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:drawablePadding="10dp"
                                android:focusedByDefault="true"
                                android:inputType="textEmailAddress"
                                android:textColor="@color/white"/>

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/passwordTxtInputEdtTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:startIconDrawable="@drawable/password"
                            app:startIconTint="@null"
                            android:hint="@string/TXT_LBL_enter_password"
                            android:background="@drawable/state_selectors"
                            android:textColorHint="@color/white"
                            app:hintAnimationEnabled="true"
                            app:hintEnabled="true"
                            android:layout_marginTop="6dp"
                            app:boxBackgroundColor="@color/black"
                            app:boxCornerRadiusTopEnd="10dp"
                            app:boxCornerRadiusBottomStart="10dp"
                            app:boxCornerRadiusBottomEnd="10dp"
                            app:boxCornerRadiusTopStart="10dp"
                            app:passwordToggleEnabled="true"
                            android:focusedByDefault="true"
                            app:passwordToggleTint="@color/white"
                            android:nextFocusRight="@drawable/login_bg"
                            android:nextFocusDown="@drawable/login_bg"
                            android:nextFocusUp="@id/emailTxtInputEdtTxt"
                            android:nextFocusLeft="@id/emailTxtInputEdtTxt"
                            >
                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/passwordEdtTxt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:focusedByDefault="true"
                                android:inputType="textPassword"
                                android:textColor="@color/white"/>

                        </com.google.android.material.textfield.TextInputLayout>


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginButton"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/TXT_LBL_login"
                            android:layout_marginTop="25dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:textColor="@color/white"
                            android:background="@drawable/gradient_button_state_selector"
                            app:backgroundTint="@null"
                            android:textAllCaps="true"
                            app:iconGravity="textEnd"
                            app:iconSize="15dp"
                            android:focusedByDefault="true"
                            app:icon="@drawable/baseline_arrow_forward_24"
                            app:iconPadding="10dp"
                            app:iconTint="@color/white"
                            app:rippleColor="@color/colorPrimary"
                            android:hapticFeedbackEnabled="true"
                            android:nextFocusLeft="@id/passwordEdtTxt"
                            android:nextFocusUp="@id/passwordEdtTxt"
                            />

                    </LinearLayout>

                </ScrollView>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </LinearLayout>









</androidx.constraintlayout.widget.ConstraintLayout>