<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding"
    android:focusable="true"
    android:focusedByDefault="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.fragments.MyEarningsFragment"
   >


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:focusedByDefault="true"
        android:layout_marginEnd="5dp"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/aboutCityImageBG"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/stroke_state_selector"
                android:padding="0dp"
                android:focusable="true"
                android:focusedByDefault="true"
                android:src="@drawable/back_arrow"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TXT_LBL_my_earnings"
                android:layout_weight="1"
                android:layout_marginLeft="20dp"
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/blue_stroke_drawable">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:drawableStart="@drawable/earning"
                        android:text="Select Month"
                        android:textColor="@color/white"
                        android:backgroundTint="@android:color/black"
                        android:background="@drawable/corner_black_background"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_margin="1dp"
                        android:padding="15dp"
                        android:drawablePadding="10dp"
                        android:drawableEnd="@drawable/arrow_down"/>

                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/notificationRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:itemCount="10"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/notification_item"
                        android:text="@string/TXT_LBL_we_re_the_sales_performance_agency_we_re_been_helping_businesses_drive_revenue"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:animateLayoutChanges="true"
                        android:animationCache="true"
                        app:shimmer_repeat_mode="restart"
                        app:shimmer_shape="radial"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"  >
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical"
                            >
                            <include
                                layout="@layout/shimmer_notification_layout"/>
                            <include
                                layout="@layout/shimmer_notification_layout"/>
                            <include
                                layout="@layout/shimmer_notification_layout"/>
                            <include
                                layout="@layout/shimmer_notification_layout"/>
                            <include
                                layout="@layout/shimmer_notification_layout"/>
                            <include
                                layout="@layout/shimmer_notification_layout"/>

                        </LinearLayout>

                    </com.facebook.shimmer.ShimmerFrameLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_11sdp"
                        android:text="@string/TXT_LBL_total_price_feb"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/blue_radium_gradient_drawable">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:drawableStart="@drawable/earning"
                            android:text="INR 11,55200"
                            android:textColor="@color/skyBlue2"
                            android:backgroundTint="@android:color/black"
                            android:background="@drawable/corner_black_background_2"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:layout_margin="1dp"
                            android:paddingTop="15dp"
                            android:paddingBottom="15dp"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:drawablePadding="10dp"
                            />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/TXT_LBL_note"
                        android:textColor="@color/skyBlue2"
                        android:textSize="@dimen/_9sdp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_9sdp"
                        android:text="@string/TXT_LBL_we_will_count_for_payout_for_minimum_6_hours_on_daily_basis"/>
                </LinearLayout>

            </LinearLayout>



        </androidx.core.widget.NestedScrollView>




    </LinearLayout>

    <ImageView
        android:id="@+id/aboutCityImageBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/bg1"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>